--- a/ppms_project/profilingApp/templates/activities/BHW Home.html
+++ b/ppms_project/profilingApp/templates/activities/BHW Home.html
@@ -93,16 +93,14 @@
  </script>
 
 <!-- Dashboard -->
-<div id="grid" class="container-fluid" style="margin-top:60px;">
+<div id="grid" class="container-fluid" style="margin-top:85px;">
     <div class="container">
         <div class="container">
-            <div class="row justify-content-between"> 
-                <div class="col-5">
+            <div class="row"> 
+                <div class="col-sm-6 mb-3 d-flex justify-content-sm-start justify-content-center">
                     <h3 style="text-align:left;">Dashboard</h3>
                 </div>
-                <div class="col-5"></div>
-                <br>
-                <div class="col">
+                <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
                     <div class="card text-right" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
@@ -114,9 +112,9 @@
                 <hr>
             </div>
         </div>
-        <div class="row">
-                <div class="col">
-                <div class="card shadow-sm bg-white rounded">
+        <div class="row d-flex align-items-stretch">
+                <div class="col-md mb-2">
+                <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
                             <h5 class="card-title">Normal</h5>
                         </div>
@@ -125,8 +123,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded  h-100">
                         <div class="card-header">
                             <h5 class="card-title">Wasted</h5>
                         </div>
@@ -135,8 +133,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded  h-100">
                         <div class="card-header">
                             <h5 class="card-title">Severly Wasted</h5>
                         </div>
@@ -145,8 +143,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded  h-100">
                         <div class="card-header">
                             <h5 class="card-title">Overweight</h5>
                         </div>
@@ -155,8 +153,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded  h-100">
                         <div class="card-header">
                             <h5 class="card-title">Obese</h5>
                         </div>
@@ -189,7 +187,7 @@
 {% endblock %}
 
 <!-- Footer -->
-<div class="footer">
+<div class="footer text-muted">
     <div class="container">
         <div class="row text-center align-items-center">
                 <div class="border-top p-4">
