--- a/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
+++ b/ppms_project/profilingApp/templates/activities/Parent - Preschooler Profile.html
@@ -17,9 +17,10 @@
                 <div id="navLinks">
                     <ul class="nav text-small">
                         <li>
-                            <a href="{% url 'parent_home' %}" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
+                            <a href="{% url 'parent_home' %}" style="border-radius: 13%;" class="nav-link" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7" 
                             title="Go back to Parent Home">
                             <i class="fa fa-lg fa-fw fa-chevron-circle-left" style="font-size: 24px;"></i>    
+                            <span style="color:rgb(3, 3, 3);">Back</span> 
                             </a>
                         </li>
                     </ul>
@@ -39,43 +40,41 @@
 </script>
 
 <!-- Dashboard -->
-<div id="grid" class="container-fluid" style="margin-top: 60px;">
+<div id="grid" class="container-fluid" style="margin-top: 85px;">
     <div class="container-grid">
-        <div class="">
             <div class="row"> 
                 <div class="col">
                     <h3 style="text-align:left;">Preschooler's Profile</h3>
                 </div>
             </div>
         <hr>
-        </div>
         <div>
             <section>
                 <div class="row">
-                    <div class="col">
+                    <div class="col-md-6 col-12 mb-4 mb-md-3">
                         <div class="card">
                             <div class="card-header">
-                                <h6 class=" mx-1 my-1">Preschooler Details</h6>
-
+                                <h4 class=" mx-1 my-1">Preschooler Details</h4>
                             </div>
-                            <div class="card-body p-4">
+
+                            <div class="card-body p-4 shadow-lg">
                                 <div class="row">
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Full Name</p>
                                     </div>
                                     {% if preschooler.suffix_name is None %}
-                                        <div class="col-sm">
+                                        <div class="col-sm justify-content-start justify-content-md-center">
                                             <p class="text-muted mb-0">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }}</p>
                                         </div>
                                     {% else %}
-                                        <div class="col-sm">
+                                        <div class="col-sm justify-content-start justify-content-md-center">
                                             <p class="text-muted mb-0">{{ preschooler.first_name }} {{ preschooler.middle_name }} {{ preschooler.last_name }} {{ preschooler.suffix_name }}</p>
                                         </div>
                                     {% endif %}
                                 </div>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Date of Birth</p>
                                     </div>
                                     <div class="col-sm">
@@ -84,67 +83,89 @@
                                 </div>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Age</p>
                                     </div>
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="text-muted mb-0">{{ preschooler.age_months }} Months</p>
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Gender</p>
                                     </div>
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="text-muted mb-0">{{ preschooler.gender }}</p>
                                     </div>
                                 </div>
                                 <hr>
                                 <div class="row">
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Weight:</p>
                                     </div>
                                     {% if preschooler.weight is None%}
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="text-muted mb-0">{{ preschooler.weight }} </p>
                                     </div>
                                     {% else%}
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="text-muted mb-0">{{ preschooler.weight }} kg</p>
                                     </div>
                                     {% endif %}
 
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="mb-0">Height:</p>
                                     </div>
                                     {% if preschooler.height is None%}
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="text-muted mb-0">{{ preschooler.height }}</p>
                                     </div>
                                     {% else %}
-                                    <div class="col-sm">
+                                    <div class="col-sm justify-content-start justify-content-md-center">
                                         <p class="text-muted mb-0">{{ preschooler.height }} cm</p>
                                     </div>
                                     {% endif %}
                                 </div>
                                 <hr>
                             </div>
+                            <div class="card-footer small text-muted">
+                                Last Updated : {{ preschooler.date_measured }} 
+                            </div>
                         </div>
                     </div>
                     
-                    <div class="col text-center h-50">
-                        <h6 class="text-center">Nutritional Status Legends:</h6>
-                        <i class="fas fa-square" style="color: rgb(0, 165, 79);"> -Normal</i>
-                        <i class="fas fa-square" style="color: rgb(255, 241, 2);"> -Wasted</i>
-                        <i class="fas fa-square" style="color: rgb(238, 29, 35);"> -Severly Wasted</i>
-                        <i class="fas fa-square" style="color: rgb(242, 98, 33);"> -Overweight/Obese</i>
+                    <div class="col-md-6 col-12 text-center h-100 mb-3 ">
+                        
+                        <h5 class="text-start mx-3 mb-3">Nutritional Status Legends:</h5>
+                        <div class="col align-self-stretch h-100 mx-3">
+                            <div class="row-xxl d-flex justify-content-start ">
+                                <div class="col d-flex justify-content-start mb-2">
+                                    <i class="fas fa-2x fa-square" style="color: rgb(0, 165, 79);"></i>
+                                    <span class="mx-1"><h5>Normal</h6></span>
+                                </div>
+                                <div class="col d-flex justify-content-start mb-2">
+                                    <i class="fas fa-2x fa-square" style="color: rgb(255, 241, 2);"></i>
+                                    <span class="mx-1"><h5>Wasted</h5></span>
+                                </div>          
+                            </div>
+                            <div class="row-xxl d-flex justify-content-evenly">
+                                <div class="col d-flex justify-content-start mb-2" >
+                                    <i class="fas fa-2x fa-square" style="color: rgb(238, 29, 35);"></i>
+                                    <span class="mx-1"><h5>Severly Wasted</h5></span>
+                                </div>
+                                <div class="col d-flex justify-content-start mb-2" >
+                                    <i class="fas fa-2x fa-square" style="color: rgb(242, 98, 33);"></i>
+                                    <span class="mx-1"><h5>Overweight/Obese</h5></span>
+                                </div>
+                            </div>
+                        </div>
                         <!-- <i class="fas fa-square" style="color: rgb(0,0,0);"> -Obese</i> -->
                         <hr>
-                        <div class="card-group">
+                        <div class="card-group my-2 mx-3">
                             <div class="card">
                                 <div class="card-header">
-                                    <h6 class="card-title">WFA Status</h6>
+                                    <h5 class="card-title">WFA Status</h4>
                                 </div>
                                 {% if preschooler.wfa is None%}
                                     <div class="card-body">
@@ -170,7 +191,7 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    <h6 class="card-title">HFA Status</h6>
+                                    <h5 class="card-title">HFA Status</h3>
                                 </div>
                                 
                                 {% if preschooler.hfa is None %}
@@ -197,7 +218,7 @@
                             </div>
                             <div class="card">
                                 <div class="card-header">
-                                    <h6 class="card-title">WHFA Status</h6>
+                                    <h5 class="card-title">WHFA Status</h5>
                                 </div>
                                 {% if preschooler.whfa is None %}
                                     <div class="card-body">
@@ -226,18 +247,19 @@
                         </div>
                     </div>
                 </div>
-                <br>
                 <div class="row">
-                    <div class="card">
-                        <div class="card-header">
-                            Nutritional Status History
-                        </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="card-header">
+                                Nutritional Status History
+                            </div>
 
-                        <div class="card-body">
-                            <canvas id="myChart" width="100%" height="30"></canvas>
-                        </div>
-                        <div class="card-footer small text-muted">
-                            Updated yesterday at 11:59 PM
+                            <div class="card-body">
+                                <canvas id="myChart" width="100%" height="30"></canvas>
+                            </div>
+                            <div class="card-footer small text-muted">
+                                Updated yesterday at 11:59 PM
+                            </div>
                         </div>
                     </div>
                 </div>
