--- a/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
+++ b/ppms_project/profilingApp/templates/activities/Admin - Preschooler.html
@@ -45,20 +45,22 @@
                         </li>
                         <li>
                             <a class="btn nav-link" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="User Settings" aria-expanded="false">
+                            title="User" aria-expanded="false">
+                            <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
+                            <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
+                                <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
+                            </span></a>
                             
-                                <i class="fa fa-fw fa-user-cog bi dropdown-toggle" style="font-size: 24px;"></i>   
+                                
                             </a>
                             <ul class="dropdown-menu dropdown-menu-end p-2" aria-labelledby="dropdownUser1">
                                 <div id="dropdown-menu">
                                     <div>
-                                        <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>   
-                                        <p class="text-center p-3">Signed in as an Admin</p>
+                                        <i class="fa fa-lg fa-fw fa-user bi" style="margin-left:5px;"></i>  
                                         <span style="font-size: 15px;"> {{ user.first_name }} {{ user.last_name }} </span>
                                     </div>
                                     <div>
                                         <li><hr class="dropdown-divider"></li>
-                                        <p class="text-center p-3">Signed in as an Admin</p>
                                         <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
                                     </div>
                                 </div>
@@ -85,13 +87,11 @@
 <div id="grid" class="container-fluid">
     <div class="container">
         <div class="container">
-            <div class="row justify-content-between"> 
-                <div class="col-5">
-                    <h3 style="text-align:left;"> Preschooler Dashboard</h3>
+            <div class="row"> 
+                <div class="col-sm-6 mb-3 d-flex justify-content-sm-start justify-content-center">
+                    <h3> Preschooler Status Overview</h3>
                 </div>
-                <div class="col-5"></div>
-                <br>
-                <div class="col">
+                <div class="col-sm-6  mb-3 d-flex justify-content-sm-end justify-content-center">
                     <div class="card text-right" style="width: 10rem;">
                         <div class="dropdown text-center" >
                             <h6 class="text-uppercase text-muted dropdown-header">Barangay</h6>
@@ -112,9 +112,9 @@
                 <hr>
             </div>
         </div>
-        <div class="row">
-                <div class="col">
-                <div class="card shadow-sm bg-white rounded">
+        <div class="row d-flex align-items-stretch">
+                <div class="col-md mb-2">
+                <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
                             <h6 class="card-title">Normal</h6>
                         </div>
@@ -123,8 +123,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100">
                         <div class="card-header">
                             <h6 class="card-title">Wasted</h6>
                         </div>
@@ -133,8 +133,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
                             <h6 class="card-title">Severly Wasted</h6>
                         </div>
@@ -143,8 +143,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
                             <h6 class="card-title">Overweight</h6>
                         </div>
@@ -153,8 +153,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card shadow-sm bg-white rounded">
+                <div class="col-md mb-2">
+                    <div class="card shadow-sm bg-white rounded h-100 ">
                         <div class="card-header">
                             <h6 class="card-title">Obese</h6>
                         </div>
@@ -171,7 +171,7 @@
                 </div>
                 <div class="card shadow-sm bg-white rounded">
 
-                    <div class="card-body p-3 ">
+                    <div class="card-body p-4">
                         <canvas id="myBar" width="100%" height="50"></canvas>
                     </div>
                     <div class="card-footer small text-muted">
