--- a/ppms_project/profilingApp/templates/activities/Admin Home.html
+++ b/ppms_project/profilingApp/templates/activities/Admin Home.html
@@ -66,7 +66,7 @@
                         </li>
                         <li>
                             <a class="btn nav-link position-relative" id="dropdownUser1" data-bs-toggle="dropdown" data-toggle="tooltip" data-bs-placement="bottom" data-bs-offset="0,7"
-                            title="User Settings" aria-expanded="false">
+                            title="User" aria-expanded="false">
                                 <i class="fa fa-fw fa-user-cog bi" style="font-size: 24px;"></i>
                                 <span class="position-absolute top-100 start-75 translate-middle badge rounded-pill text-dark" style="border-radius: 50%;">
                                     <i class="fa fa-lg fa-fw fa-caret-down bg-light" style="border-radius: 25%; margin-bottom: 15px;"></i>
@@ -81,7 +81,6 @@
                                     </div>
                                     <div>
                                         <li><hr class="dropdown-divider"></li>
-                                        <p class="text-center p-3">Signed in as an Admin</p>
                                         <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-fw fa-sign-out-alt mx-1"></i>Sign out</a></li>
                                     </div>
                                 </div>
@@ -109,55 +108,50 @@
             <h2 style="text-align:left;">Overall Data</h2>
             <hr>
             <!-- MAIN CARDS STARTS HERE -->
-            <div class="row d-flex display-block">
-                <div class="col-8">
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="row-12 mb-3">
-                                <div class="card shadow-sm bg-white rounded">
+            <div class="row d-flex align-items-stretch ">
+                <div class="col-xxl-8 col-lg-6 col-md-12 ">
+                    <div class="row mb-3 align-items-stretch">
+                        <div class="col-xxl-3 col-sm-6 mb-2">
+                                <div class="card shadow-sm bg-white rounded h-100">
                                     <div class="card-header"><i class="fas fa-lg fa-user-check" style="color: green; position:relative; margin-right:10px;"></i>Number of Validated BHW</div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ validated_count }}</h5>
                                     </div>
                                 </div>
-                            </div>
                         </div>
-                        <div class="col-6">
-                            <div class="row-12 mb-3">
-                                <div class="card shadow-sm bg-white rounded">
+                        <div class="col-xxl-3 col-sm-6 mb-2">
+                                <div class="card shadow-sm bg-white rounded h-100">
                                     <div class="card-header"><i class="fas fa-lg fa-user" style="color: rgb(0, 0, 0); position:relative; margin-right:10px;"></i>Number of Parents</div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ parent_count }}</h5>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class='row mb-3'>
-                        <div class="col-6">
-                            <div class="card shadow-sm bg-white rounded">
+                        <div class="col-xxl-3 col-sm-6 mb-2 ">
+                            <div class="card shadow-sm bg-white rounded h-100">
                                 <div class="card-header"><i class="fas fa-lg fa-user-slash" style="color:orange; position:relative; margin-right:10px;"></i>Number of Non-Validated BHW</div>
                                 <div class="card-body">
                                     <h5 class="card-title">{{ invalidated_count }}</h5>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                                <div class="card shadow-sm bg-white rounded">
+                        <div class="col-xxl-3 col-sm-6 mb-2">
+                                <div class="card shadow-sm bg-white rounded h-100">
                                     <div class="card-header"><i class="fas fa-lg fa-baby" style="color: green; position:relative; margin-right:10px;"></i>Number of Preschoolers</div>
                                     <div class="card-body">
                                         <h5 class="card-title">{{ preschooler_count }}</h5>
-                                    </div>
                                 </div>
+                                </div>
+                    
                         </div>
                     </div>
-                    <div class='row'>
+                    <div class='row d-flex align-items-stretch mb-2'>
                         <div class="col-xl-12">
-                            <div class="card shadow-sm mb-3 bg-white rounded">
+                            <div class="card shadow-sm bg-white rounded h-100">
                                 <div class="card-header">
                                     <h4 style="Padding: 10px 40px 0px 0px;">Barangay Health Workers</h4>
                                 </div>
-                                <div class="card-body p-3 ">
+                                <div class="card-body p-3">
                                     <div class="table-responsive">
                                         <table class="table table-hover" style="border:none " id="user_list">
                                             <thead>
@@ -197,13 +191,13 @@
                     </div>
                     
                 </div>
-                <div class="col-4 h-100 ">
+                <div class="container-fluid col-xxl-4 col-lg-6 col-md-12 h-100 align-items-stretch">
                     <div class="col-xl-12 mb-3">
                         <div class="card shadow-sm bg-white rounded" >  
                             <div class="card-header">
                                 <i class="fas fa-lg fa-chart-pie" style="color:orange; position:relative; margin-right:10px;"></i>Overview Chart</div>
-                            <div class="card-body">
-                                <canvas class="chart-view" id="myPieChart" width="470" height="550" style="display: block; box-sizing: border-box;"></canvas>  
+                            <div class="card-body p-md-4">
+                                <canvas class="chart-view" id="myPieChart" width="470" height="550"></canvas>  
                             </div>
                         </div>
                     </div>
@@ -217,7 +211,7 @@
 <!-- Form-->
 
     <!-- Footer -->
-<div class="footer">
+<div class="footer text-muted">
   <div class="container">
       <div class="row text-center align-items-center">
               <div class="border-top p-4">
